Fix: StorageAccess::filePath() returns /\u0000 for encrypted root

BUG: 478839